--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quebre as Correntes PRO - FINAL OTIMIZADO</title>
+    <title>Quebre as Correntes PRO</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -1228,3 +1228,4 @@ function changePassword() {
     </script>
 </body>
 </html>
+
